@@ -8,6 +8,8 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_01-dev
 
+added HTTP_OK to Apache::Constants :http export tag
+
 fixed bug in Apache::ModuleConfig->getline
 
 Segfaults when build with Ben-SSL 1.27, and trying to exec the gcache.
